--- a/dungeonman/partials/character_create.html
+++ b/dungeonman/partials/character_create.html
@@ -1,10 +1,10 @@
 <div class="col-md-4">
     <h3>Add a character</h3>
-    <form ng-submit="CharacterFactory.name_of_character" role="form" class="form-inline">
+    <form ng-submit="addCharacter()" role="form" class="form-inline">
         <div class="form-group">
             <h3>Enter your name:</h3>
-            <input type="text" size="10" ng-model="CharacterFactory.name_of_character" class="form-control-input" placeholder="DUNGEON MAN" required>
-
+            <input type="text" size="10" ng-model="nameOfCharacter" class="form-control-input" placeholder="DUNGEON MAN" required>
+            <button type="submit" class="btn btn-success">Enter</button>
         </div>
 
         <!-- <div class="form-group">
@@ -15,8 +15,8 @@
                 <option value=50>Peasant</option>
             </select>
         </div> -->
-        <button type="submit" class="btn btn-success">Enter</button>
-    </form>``
-    {{ name_of_character }}
+
+    </form>
+    {{ CharacterFactory.name_of_character }}
 
 </div>
