--- a/dungeonman/partials/character_create.html
+++ b/dungeonman/partials/character_create.html
@@ -7,16 +7,21 @@
             <button type="submit" class="btn btn-success">Enter</button>
         </div>
 
-        <!-- <div class="form-group">
+        <div class="form-group">
             <h3>Select your class:</h3>
-            <select ng-model="CharacterFactory.healthPoints" required>
+            <select ng-model="healthPoints" required>
                 <option value=100>Fighter</option>
                 <option value=75>Mercenary</option>
                 <option value=50>Peasant</option>
             </select>
-        </div> -->
+        </div>
 
     </form>
-    {{ CharacterFactory.name_of_character }}
+<p>{{ CharacterFactory.name_of_character }}</p>
+    <div ng-show="CharacterFactory.name_of_character">
+        <p>{{ CharacterFactory.healthPoints }} hit points</p>
+    </div>
+
+    <a ui-sref="cell" link href=""><button type="submit">GO TO JAIL, DUNGEON MAN</button></a>
 
 </div>
