--- a/dungeonman/partials/cell.html
+++ b/dungeonman/partials/cell.html
@@ -1,3 +1,11 @@
-<p>
-    hello
-</p>
+<!-- {{ CharacterFactory.name_of_character }} -->
+<div class="col-md-4">
+
+    <h2>A dark, damp cell</h2>
+
+    <p>The guard swings open the gate to your new home: a dark, damp cell. "Welcome to your new life, DUNGEON MAN," he says as he turns to leave.</p>
+    <p>"But my name is {{ CharacterFactory.name_of_character }} !, you shout.</p>
+    <p>"Not anymore, DUNGEON MAN!" he scoffs, and leaves.</p>
+    <br>
+    <p>You sit on the floor and take in your surrondings. The walls are cold, brick, unforgiving. The steel bars comprising the door are rusty and appear to be roughly a thousand years old. At the bottom of the eastern wall there is a rat hole.</p>
+</div>
