--- a/dungeonman/css/styles.css
+++ b/dungeonman/css/styles.css
@@ -1,10 +1,10 @@
 body {
     background-size: cover;
     color: #FF8533;
-    text-shadow: -3px 0 black, 0 3px black, 3px 0 black, 0 -3px black;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     text-align: center;
     background-repeat: no-repeat;
-    background-image:   url("http://wowarmenia.com/wp-content/uploads/2009/04/061_4_temnica_grikora1.jpg");
+    background-image: url("/../images/dungeon.jpg");
 }
 
 h6 {
